k8s/a-b-testing/hello-world-v1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-service-v1
  name: hello-world-service-v1
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world-v1
  name: hello-world-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-v1
  template:
    metadata:
      labels:
        app: hello-world-v1
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'  
    spec:
      containers:
      - image: avthart/hello-app:1.0.0
        name: hello-world-v1
        ports:
        - name: web
          containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "150m"
        # liveness probes to know when to restart a Container.
        livenessProbe:
          httpGet:
            path: /health
            port: web
          initialDelaySeconds: 10
          periodSeconds: 5
        # readiness probes to know when a Container is ready to start accepting traffic.
        readinessProbe:
          httpGet:
            path: /health
            port: web
          initialDelaySeconds: 10
          periodSeconds: 5
